# epics

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md
include/epics/: enums_as_flags11.hpp  operator_in11.hpp  pstream17.hpp  public_cast20.hpp
include/eps/: aux_type_traits.hpp  operator_in.hpp  pstream.hpp
tests/: CMakeLists.txt  enums_as_flags11.cpp  operator_in.cpp  operator_in11.cpp  pstream.cpp  pstream17.cpp  public_cast20.cpp
